--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,15 @@ environment:
   sdk: ">=2.1.0<3.0.0"
 
 dependencies:
+
   flutter:
     sdk: flutter
 
+  animated_text_kit: ^2.2.0
+  firebase_core: ^0.4.5
+  cloud_firestore: ^0.13.7
+  firebase_auth: ^0.16.1
+  modal_progress_hud: ^0.1.3
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
